# airbnb-clone-backend

./: README.md  pyproject.toml  todo.txt
bookings/: models.py  serializers.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: models.py  serializers.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
common/: models.py
config/: authentication.py  settings.py  urls.py
direct_messages/: admin.py  models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chatroom_users_alter_message_room_and_more.py
experiences/: admin.py  models.py  views.py
experiences/migrations/: 0001_initial.py  0002_experience_category_alter_perk_details_and_more.py  0003_alter_experience_category_alter_experience_host_and_more.py
medias/: admin.py  models.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_room_and_more.py  0003_alter_photo_file_alter_video_file.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_rating.py  0003_alter_review_experiences_alter_review_rooms_and_more.py  0004_rename_rooms_review_room.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_amenity_created_at_amenity_updated_at_and_more.py  0003_room_name.py  0004_alter_amenity_options.py  0005_room_category.py  0007_alter_room_kind.py  (+1 more)
users/: admin.py  models.py  views.py
wishlists/: admin.py  models.py  serializers.py  views.py
(+10 files in other folders)
